fixed featured images by adding flex-wrap

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -60,3 +60,8 @@
       .border {
         border: solid red 1px
       }
+
+      .cardSize {
+        width: 25%;
+        
+      }
